--- a/Projects (7-9)/Project 7/index.html
+++ b/Projects (7-9)/Project 7/index.html
@@ -8,35 +8,41 @@
     <title>Document</title>
 </head>
 <body >
-    <nav class="flex justify-between items-center text-slate-200 text-lg  bg-zinc-900">
+    <!-- large screen device -->
+    <nav class="flex justify-center items-center text-slate-200 text-lg  bg-zinc-900  
+         lg:flex justify-between items-center text-slate-200 text-lg  bg-zinc-900">
         <div class="mt-8">
-            <img class="w-32 ml-24" src="./assets/icons/Logo.svg" alt="logo">
+            <img class="w-36 ml-12  lg:w-32 lg:ml-24" src="./assets/icons/Logo.svg" alt="logo">
         </div>
         <div  class="mt-8">
-            <ul class=" flex justify-center items-center">
-                <li class="px-5">Home     </li>
-                <li class="px-5">Features </li>
-                <li class="px-5">Pricing  </li>
-                <li class="px-5">About us </li>
+            <ul class="hidden lg:flex justify-center items-center">
+                <li class="px-5 hover:text-white hover:font-semibold">Home     </li>
+                <li class="px-5 hover:text-white hover:font-semibold">Features </li>
+                <li class="px-5 hover:text-white hover:font-semibold">Pricing  </li>
+                <li class="px-5 hover:text-white hover:font-semibold">About us </li>
             </ul>
         </div>
-        <div class="flex justify-center items-center mr-8 mt-8">
-               <p class=" flex justify-center items-center">
-                <span>Eng</span>
+        <div class="hidden lg:flex justify-center items-center mr-8 mt-8">
+               <p class="flex justify-center items-center">
+                <span class="hover:text-white hover:font-semibold">Eng</span>
                 <span> <img class="w-4 mt-1 ml-2" src="./assets/icons8-triangle-32.png" alt=""> </span>
                </p>
-               <p class=" flex justify-center items-center ml-4">
+               <p class="hidden lg:flex justify-center items-center ml-4">
                 <span> <img src="./assets/icons/btn-pink-bg.svg" alt=""></span>
-                <span class="relative right-8" >Contact Us</span>
+                <span class="relative right-8 hover:text-white hover:font-semibold" >Contact Us</span>
                </p>
         </div>
+        <div>
+            <img class="w-12 mr-8 mt-4 hover:bg-[#FF00FF] lg:hidden" src="./assets/menu mobile.png" alt="">
+        </div>
     </nav>
+   
     <!-- hero section -->
     <section>
       <div class="flex justify-center bg-zinc-900">
         <div class="ml-12">
-            <p class="text-7xl text-slate-50 mt-24 absolute left-22">Simplify All Transactions <br> in <span class="text-[#FF00FF] font-medium">One Card</span></p>
-            <p class="text-slate-100 text-xl mt-72">Hurry up and join now,with this you can manage your daily finances easily and safely.</p>
+            <p class="text-7xl text-slate-50 mt-24 absolute left-16  font-semibold   lg:text-7xl text-slate-50 mt-24 absolute left-22">Simplify All Transactions <br> in <span class="text-[#FF00FF] font-medium">One Card</span></p>
+            <p class="text-slate-100 text-xl pt-[100px] lg:text-slate-100 text-xl mt-72">Hurry up and join now,with this you can manage your daily finances easily and safely.</p>
             <p class="flex  items-center mt-12">
                 <span> <img src="./assets/icons/btn-pink-bg.svg" alt=""></span>
                 <span class="text-slate-100 relative right-6 text-xl font-normal">GET STARTED</span>
@@ -57,39 +63,39 @@
                 </p>
             </div>
       </div>
-      <div class="mb-48">
-          <img class="w-[950px] relative right-32" src="./assets/backCards.png" alt="">
-          <img  class="w-[680px] absolute top-32 left-[600px]" src="./assets/frontCards.png" alt="">
+      <div class="lg:mb-48">
+          <img class=" lg:w-[950px] lg:relative lg:right-32" src="./assets/backCards.png" alt="">
+          <img  class="w-[0] lg:w-[680px] lg:absolute lg:top-32 lg:left-[600px]" src="./assets/frontCards.png" alt="">
       </div>
       </div>
     </section>
     
     <section>
         <div class=" flex justify-center items-center bg-zinc-700 py-14">
-            <div> <img class="w-28 mx-8" src="./assets/icons/Logo.svg" alt=""></div>
-            <div> <img class="w-28 mx-8 " src="./assets/icons/Logo.svg" alt=""></div> 
-            <div> <img class="w-28 mx-8 " src="./assets/icons/Logo.svg" alt=""></div> 
-            <div> <img class="w-28  mx-8" src="./assets/icons/Logo.svg" alt=""></div> 
-            <div> <img class="w-28 mx-8 " src="./assets/icons/Logo.svg" alt=""></div>
+            <div> <img class="w-28 ml-20 lg:w-28 mx-8" src="./assets/icons/Logo.svg" alt=""></div>
+            <div> <img class="w-28 ml-20 lg:w-28 mx-8 " src="./assets/icons/Logo.svg" alt=""></div> 
+            <div> <img class="w-28 ml-20 lg:w-28 mx-8 " src="./assets/icons/Logo.svg" alt=""></div> 
+            <div> <img class="w-0 lg:w-28 mx-8" src="./assets/icons/Logo.svg" alt=""></div> 
+            <div> <img class="w-0 lg:w-28 mx-8 " src="./assets/icons/Logo.svg" alt=""></div>
         </div>
     </section>
     <section>
        <div class="bg-zinc-900 ">
-        <div class="flex justify-center items-center ">
-            <div class="text-6xl text-slate-50 mt-24 ml-20 p-6 font-light">The best payment service for <span class="text-[#FF00FF] font-medium">your transactions.</span></div>
-            <div class="text-slate-100 text-xl mt-24 p-20"> the following  are the services we provide to users, we the services we maximize it is hoped that users are  satisfied with what we provide.</div>
+        <div class="lg:flex justify-center items-center">
+            <div class="text-6xl text-slate-50 pt-16 ml-20  font-light lg:text-6xl text-slate-50 lg:mt-24 ml-20 p-6 font-light">The best payment service for <span class="text-[#FF00FF] font-medium">your transactions.</span></div>
+            <div class="text-slate-100 text-2xl  lg:text-slate-100 text-xl mt-24 p-20"> the following  are the services we provide to users, we the services we maximize it is hoped that users are  satisfied with what we provide.</div>
         </div>
-        <div class="flex justify-center items-center pb-24 mt-24">
-            <div class="flex flex-col justify-center items-center mr-24 p-8 border bg-neutral-800"> 
+        <div class="flex flex-col justify-center items-center lg:flex lg:flex-row justify-center items-center pb-24 mt-24">
+            <div class="flex flex-col justify-center items-center lg:mr-24 lg:p-8 p-10 mb-4 border bg-neutral-800 hover:bg-neutral-600"> 
                 <img src="./assets/icons/dollar-circle.svg" alt="">
                 <p class="text-slate-100 text-2xl mt-2">Free transaction fee</p>
             </div>
-            <div class="flex flex-col justify-center items-center p-6 border bg-neutral-700"> 
+            <div class="flex flex-col justify-center items-center p-6 border bg-neutral-700 hover:bg-neutral-500"> 
                 <img src="./assets/icons/cloud-add.svg" alt="">
                  <p class="text-slate-100 text-2xl mt-2"> Easy to access  </p>      
                  <p class="text-slate-100 text-2xl ">  anytime and anywhere </p>  
             </div>
-            <div class="flex flex-col justify-center items-center ml-16 p-8 border bg-neutral-800"> 
+            <div class="flex flex-col justify-center items-center lg:ml-16 p-10 mt-4 border bg-neutral-800 hover:bg-neutral-600"> 
                 <img src="./assets/icons/lock.svg" alt="">
                 <p class="text-slate-100 text-2xl mt-2"> Guaranteed safety</p>
             </div>
@@ -98,10 +104,10 @@
     </section>
     <section>
     <div class="flex flex-col justify-center items-center bg-pink-100">
-        <p class="text-6xl mt-24"> Unique and interesting </p>
-        <p class="text-5xl text-[#FF00FF] font-medium mt-8"> card choices </p>
-        <p class="relative top-20 text-lg text-zinc-700"> We provide card editing features,where users can edit unique card </p>
-        <p class="relative top-20 text-lg text-zinc-700">according to the wishes and preferences of the users themselves.</p>
+        <p class="text-4xl  font-semibold mt-12 lg:text-6xl lg:mt-24"> Unique and interesting </p>
+        <p class="text-4xl px-2 font-semibold mt-4 lg:text-5xl text-[#FF00FF] font-medium lg:mt-8"> card choices </p>
+        <p class="relative top-10 left-6  lg:relative lg:top-20 text-lg text-zinc-700"> We provide card editing features,where users can edit unique card </p>
+        <p class="relative top-10 left-6 lg:relative lg:top-20 text-lg text-zinc-700">according to the wishes and preferences of the users themselves.</p>
         <div> 
             <img class="w-[900px]"  src="./assets/VCards.png" alt="">
         </div>
@@ -109,34 +115,34 @@
     </section>
     <section>
          <div class="flex flex-col justify-center items-center  bg-zinc-900  pb-24">
-             <p class="text-6xl text-slate-50 pt-24 ml-20 p-6 font-light">Customers are satisfied with </p>
-             <p class="text-6xl text-slate-50  ml-20  font-light"> <span class="text-[#FF00FF] font-medium">the features </span> we provide</p>
+             <p class="text-6xl text-slate-50 pt-24 ml-20 p-6 font-light">Customers are satisfied <span class="ml-20 lg:ml-0 " >with</span> </p>
+             <p class="text-6xl text-slate-50  ml-20  font-light"> <span class="text-[#FF00FF] font-medium ml-4 lg:ml-0">the features </span> <span class="ml-8 lg:ml-0">we provide</span></p>
              <p class="text-neutral-400 text-xl pt-16 ml-20"> with the various features that we provide, therefore many</p>
-             <p class="text-neutral-400  text-xl ml-20 ">Customers like the features that we provide.</p>
+             <p class="text-neutral-400  text-xl lg:ml-20 ml-16 ">Customers like the features that we provide.</p>
         </div>  
-        <div class=" grid grid-cols-2 bg-zinc-900 pb-24 gap-16">
-            <div class="border bg-neutral-700 w-[480px] h-[220px] ml-28">
+        <div class="flex flex-col lg:grid grid-cols-2 bg-zinc-900 pb-24 gap-16">
+            <div class="border bg-neutral-700 w-[300px] lg:w-[480px] lg:h-[220px] lg:ml-28 ml-24">
                 <img class="pt-4 pl-6" src="./assets/icons/5stars.svg" alt="">
                 <p class="text-slate-100 text-lg pt-6 pl-6 ">This is the best finance platfrom i've ever found,lots </p>
                 <p class="text-slate-100 text-lg pl-6 ">of features that definitely make me more satisfied!</p>
                 <p class="text-slate-100 text-lg pt-4 pl-6">Melvin Yoga</p>
                 <p class="text-slate-100 text-lg pl-6 ">New York, America</p>
             </div>
-            <div class="border bg-neutral-800 w-[480px] h-[240px] mr-16">
+            <div class="border bg-neutral-800 w-[300px] lg:w-[480px] lg:h-[240px] lg:mr-16 ml-24 ">
                 <img class="pt-4 pl-6" src="./assets/icons/4stars.svg" alt="">
                 <p class="text-slate-100 text-lg pt-6 pl-6 ">Very good and recommended financial platfrom,the  </p>
                 <p class="text-slate-100 text-lg pl-6 ">features are Very satisfying,you also should try this platfrom!</p>
                 <p class="text-slate-100 text-lg pt-4 pl-6">Sandeep </p>
                 <p class="text-slate-100 text-lg pl-6 ">Jaipur, India </p>
             </div>
-            <div class="border bg-neutral-800 w-[480px] h-[220px] ml-28 mt-4">
+            <div class="border bg-neutral-800 w-[300px] lg:w-[480px] lg:h-[220px] lg:ml-28 mt-4 ml-24">
                 <img class="pt-4 pl-6" src="./assets/icons/4stars.svg" alt="">
                 <p class="text-slate-100 text-lg pt-6 pl-6 ">This is first time i have found a financial platfrom</p>
                 <p class="text-slate-100 text-lg pl-6 ">as good as this with various features that really help me .</p>
                 <p class="text-slate-100 text-lg pt-4 pl-6">Pradeep </p>
                 <p class="text-slate-100 text-lg pl-6 ">Bangalore, India </p>
             </div>
-            <div class="border bg-neutral-800 w-[480px] h-[240px] mr-16 mt-4">
+            <div class="border bg-neutral-800 w-[300px] lg:w-[480px] lg:h-[240px] lg:mr-16 mt-4 ml-24">
                 <img class="pt-4 pl-6" src="./assets/icons/5stars.svg" alt="">
                 <p class="text-slate-100 text-lg pt-6 pl-6 ">This is the best finance platfrom i've ever found</p>
                 <p class="text-slate-100 text-lg pl-6 ">We can custom card according to our wish, I'm very satisfied </p>
@@ -154,12 +160,12 @@
     </section>
     <section>
         <div class="bg-zinc-900 pb-44">
-            <img  src="./assets/Rectangle 6773.png" alt="">
-            <img class="absolute top-[4078px] " src="./assets/Rectangle 6774.png" alt="">
-            <img class="absolute top-[4078px] " src="./assets/Diamond-left.png" alt="">
-            <img class="absolute top-[4078px] left-[750px] "src="./assets/Diamond-right.png" alt="">
-            <p class="text-6xl text-slate-100 absolute top-[4200px] ml-[350px] font-medium ">Let's starts <span class="text-neutral-900">customing </span>your</p>
-            <p class="text-6xl text-slate-100 absolute top-[4280px] ml-[550px] font-medium">card now</p>
+            <img class="absolute top-[5700px] lg:absolute lg:top-[4090px] "  src="./assets/Rectangle 6773.png" alt="">
+            <img class="absolute top-[5700px]  lg:absolute lg:top-[4080px] " src="./assets/Rectangle 6774.png" alt="">
+            <img class="absolute top-[5700px] w-[220px] lg:w-[600px] lg:absolute lg:top-[4078px] " src="./assets/Diamond-left.png" alt="">
+            <img class="absolute top-[5700px] w-[220px]  lg:w-[600px] left-[250px] lg:absolute lg:top-[4078px] lg:left-[680px] "src="./assets/Diamond-right.png" alt="">
+            <p class="text-2xl ml-[100px] lg:text-6xl text-slate-100 mt-24  absolute lg:top-[4100px] lg:ml-[350px] font-medium ">Let's starts <span class="text-neutral-900">customing </span>your</p>
+            <p class="text-2xl ml-[180px] mt-32 lg:text-6xl text-slate-100 absolute lg:top-[4180px] lg:ml-[550px] font-medium">card now</p>
             <p class="flex  items-center mt-12 absolute top-[4350px] ml-[580px] ">
                 <span> <img src="./assets/icons/btn-pink-bg.svg" alt=""></span>
                 <span class="text-slate-100 relative right-6 text-xl font-normal">GET STARTED</span>
@@ -168,16 +174,16 @@
         </div>
     </section>
     <section>
-       <div class="bg-zinc-900 pb-44 text-slate-200 text-lg flex justify-center items-center">
+       <div class="bg-zinc-900 pb-44 pl-12 lg:pl-0 text-slate-200 text-lg lg:flex justify-center items-center pt-20 lg:pt-72">
         <div>
             <img class="w-32 mr-32" src="./assets/icons/Logo.svg" alt="">
         </div>
         <div>
-            <ul class="flex flex justify-center items-center mr-24 ">
-                <li class="px-6">Branding</li>
-                <li class="px-6">Contact us</li>
-                <li class="px-6">Privacy Policy</li>
-                <li class="px-6">FAQs</li>
+            <ul class="flex flex justify-center items-center mr-24 mt-12 lg:mt-0 pl-12 lg:pl-0 ">
+                <li class="px-6 hover:text-white hover:font-semibold">Branding</li>
+                <li class="px-6 hover:text-white hover:font-semibold">Contact us</li>
+                <li class="px-6 hover:text-white hover:font-semibold">Privacy Policy</li>
+                <li class="px-6 hover:text-white hover:font-semibold">FAQs</li>
             </ul>
         </div>
 
